--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --progress --mode=production",
+    "build_d": "webpack --progress --mode=development",
     "watch": "webpack --progress --watch"
   },
   "repository": {
